--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ca3c8">  <td>23/10/23 20:32:58</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCase.FirstTestCase@46cdf8bd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1621002296</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/10/23 20:32:35</td>   <td>-23095</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestCase.FirstTestCase@46cdf8bd]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1621002296</td>   <td></td> </tr>
-<tr bgcolor="6d61be">  <td>23/10/23 20:32:47</td>   <td>-10765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.LogTest()[pri:0, instance:TestCase.FirstTestCase@46cdf8bd]">LogTest</td> 
-  <td>main@1621002296</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/10/29 22:30:56</td>   <td>-11783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.LogTest(java.lang.String,java.lang.String)[pri:0, instance:TestCase.FirstTestCase@f09733f]">LogTest</td> 
+  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:30:44</td>   <td>-23328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/10/29 22:30:56</td>   <td>-11783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.LogTest(java.lang.String,java.lang.String)[pri:0, instance:TestCase.FirstTestCase@f09733f]">LogTest</td> 
+  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:30:44</td>   <td>-23328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/10/29 22:30:56</td>   <td>-11783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.LogTest(java.lang.String,java.lang.String)[pri:0, instance:TestCase.FirstTestCase@f09733f]">LogTest</td> 
+  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:30:44</td>   <td>-23328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:30:44</td>   <td>-23328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/10/29 22:30:56</td>   <td>-11783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.LogTest(java.lang.String,java.lang.String)[pri:0, instance:TestCase.FirstTestCase@f09733f]">LogTest</td> 
+  <td>main@1222768327</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/10/29 22:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCase.FirstTestCase@f09733f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
 </table>
